--- a/index.html
+++ b/index.html
@@ -15,22 +15,20 @@
 <body>
    <header>
        <!-- навигация -->
-           <nav>
-                <div class="conteiner">
+           <div class="conteiner">
+               <nav class="nav">
                     <a class="logo" href="./index.html">Web<span class="logo-black">Studio</span></a>
-                     <ul class="nav">
-                            <li><a class="link current" target="_parent" href="./index.html">Студия</a></li>
-                            <li><a class="link" href="./portfolio.html">Портфолио</a></li>
-                            <li><a class="link" href="">Контакты</a></li>
-                     </ul>
-                </div>
-           </nav> 
-                <div class="conteiner">
+                    <ul class="nav-list">
+                        <li><a class="link current" target="_parent" href="./index.html">Студия</a></li>
+                        <li><a class="link" href="./portfolio.html">Портфолио</a></li>
+                        <li><a class="link" href="">Контакты</a></li>
+                    </ul>
+               </nav> 
                     <ul class="auth">
                         <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                         <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
                     </ul> 
-                </div>
+           </div>
    </header>    
    <main>
         <!-- Заказ -->
