--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
 <body>
    <header>
        <!-- навигация -->
-           <div class="conteiner">
-               <nav class="nav">
-                    <a class="logo" href="./index.html">Web<span class="logo-black">Studio</span></a>
-                    <ul class="nav-list">
-                        <li><a class="link current" target="_parent" href="./index.html">Студия</a></li>
-                        <li><a class="link" href="./portfolio.html">Портфолио</a></li>
-                        <li><a class="link" href="">Контакты</a></li>
-                    </ul>
-               </nav> 
-                    <ul class="auth">
-                        <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                        <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-                    </ul> 
-           </div>
+        <div class="conteiner header">
+            <nav class="nav">
+                <a class="logo" href="./index.html">Web<span class="logo-black">Studio</span></a>
+                <ul class="nav-list">
+                    <li class="item"><a class="link current" target="_parent" href="./index.html">Студия</a></li>
+                    <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
+                    <li class="item"><a class="link" href="">Контакты</a></li>
+                </ul>
+            </nav> 
+            <ul class="contact">
+                <li class="item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+        </div>
    </header>    
    <main>
         <!-- Заказ -->
         <section class="section bg-order">
             <div class="hero">
-                <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>   
-                <button class="hero-btn" type="button">Заказать услугу</button>
+                <h1 class="title">Эффективные решения для вашего бизнеса</h1>   
+                <button class="btn" type="button">Заказать услугу</button>
             </div>
         </section>
         <!-- Преимущества -->
@@ -43,19 +43,19 @@
             <div class="conteiner">
                 <h2 class="none">Наши преимущества</h2>
                 <ul class="section-list">
-                    <li>
+                    <li  class="item">
                         <h3 class="title">Внимание к деталям</h3>
                         <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
-                    <li>
+                    <li  class="item">
                         <h3 class="title">Пунктуальность</h3>
                         <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
-                    <li>
+                    <li  class="item">
                         <h3 class="title">Планирование</h3>
                         <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
-                    <li>
+                    <li  class="item">
                         <h3 class="title">Современные технологии</h3>
                         <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
@@ -66,15 +66,15 @@
         <section class="section">
             <div class="conteiner">
                 <h3 class="section-title">Чем мы занимаемся</h3>
-                <ul>
-                    <li>
-                        <img src="./image/job1.jpg" alt="Верстка" width="370">
+                <ul class="activ-list">
+                    <li class="item">
+                        <img src="./image/job1.jpg" alt="Верстка" width="370" height="274">
                     </li>
-                    <li>
-                        <img src="./image/job2.jpg" alt="Адаптив" width="370">
+                    <li class="item">
+                        <img src="./image/job2.jpg" alt="Адаптив" width="370" height="274">
                     </li>
-                    <li>
-                        <img src="./image/job3.jpg" alt="Дизайн" width="370">
+                    <li class="item">
+                        <img src="./image/job3.jpg" alt="Дизайн" width="370" height="274">
                     </li>
                 </ul>
             </di>
@@ -83,24 +83,24 @@
         <section class="section team">
                 <div class="conteiner">
                     <h2 class="section-title">Наша команда</h2>  
-                    <ul class="section-list">
-                        <li>
-                            <img src="./image/team1.jpg" alt="Product" width="270">
+                    <ul class="list-team">
+                        <li class="item-team">
+                            <img src="./image/team1.jpg" alt="Product" width="270" height="260">
                             <h3 class="name">Игорь Демьяненко</h3>
                             <p class="job">Product Designer</p>
                         </li>
-                        <li>
-                            <img src="./image/team2.jpg" alt="Frontend" width="270">
+                        <li class="item-team">
+                            <img src="./image/team2.jpg" alt="Frontend" width="270" height="260">
                             <h3 class="name">Ольга Репина</h3>
                             <p class="job">Frontend Developer</p>
                         </li>
-                        <li>
-                            <img src="./image/team3.jpg" alt="Marketing" width="270">
+                        <li class="item-team">
+                            <img src="./image/team3.jpg" alt="Marketing" width="270" height="260">
                             <h3 class="name">Николай Тарасов</h3>
                             <p class="job">Marketing</p>
                         </li>
-                        <li>
-                            <img src="./image/team4.jpg" alt="Designer" width="270">
+                        <li class="item-team">
+                            <img src="./image/team4.jpg" alt="Designer" width="270" height="260">
                             <h3 class="name">Михаил Ермаков</h3>
                             <p class="job">UI Designer</p>
                         </li>
@@ -109,21 +109,21 @@
         </section>  
     </main>
    <footer class="bg-order">
-        <div class="conteiner">
-            <a class="logo" href="./index.html">Web<span class="logo-white">Studio</span></a>
-            <address>
-                <ul class="list-adress">
-                    <li>
-                        <a class="link" href=""><span class="adress-white">г. Киев, пр-т Леси Украинки, 26</span></a>
-                    </li>
-                    <li>
-                        <a class="link" href="mailto:info@example.com">info@example.com</a>
-                    </li>
-                    <li>
-                        <a class="link" href="tel:+380991111111">+38 099 111 11 11</a>
-                    </li>
-                </ul>
-            </address>
+        <div class="conteiner footer">
+                <a class="logo" href="./index.html">Web<span class="logo-white">Studio</span></a>
+                <address>
+                    <ul class="list-adress">
+                        <li class="item">
+                            <a class="link" href=""><span class="adress-white">г. Киев, пр-т Леси Украинки, 26</span></a>
+                        </li>
+                        <li class="item">
+                            <a class="link" href="mailto:info@example.com">info@example.com</a>
+                        </li>
+                        <li class="item">
+                            <a class="link" href="tel:+380991111111">+38 099 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
         </div>
    </footer>
 </body>
