--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         <!-- Заказ -->
         <section class="section bg-order">
             <div class="hero">
-                <h1 class="title">Эффективные решения для вашего бизнеса</h1>   
+                <h1 class="title">Эффективные решения<br> для вашего бизнеса</h1>   
                 <button class="btn" type="button">Заказать услугу</button>
             </div>
         </section>
         <!-- Преимущества -->
-        <section class="section">
+        <section class="section diferent">
             <div class="conteiner">
                 <h2 class="none">Наши преимущества</h2>
                 <ul class="section-list">
@@ -86,30 +86,38 @@
                     <ul class="list-team">
                         <li class="item-team">
                             <img src="./image/team1.jpg" alt="Product" width="270" height="260">
-                            <h3 class="name">Игорь Демьяненко</h3>
-                            <p class="job">Product Designer</p>
+                            <div class="worker">
+                                <h3 class="name">Игорь Демьяненко</h3>
+                                <p class="job">Product Designer</p>
+                            </div>
                         </li>
                         <li class="item-team">
                             <img src="./image/team2.jpg" alt="Frontend" width="270" height="260">
-                            <h3 class="name">Ольга Репина</h3>
-                            <p class="job">Frontend Developer</p>
+                            <div class="worker">
+                                <h3 class="name">Ольга Репина</h3>
+                                <p class="job">Frontend Developer</p>
+                            </div>
                         </li>
                         <li class="item-team">
                             <img src="./image/team3.jpg" alt="Marketing" width="270" height="260">
-                            <h3 class="name">Николай Тарасов</h3>
-                            <p class="job">Marketing</p>
+                            <div class="worker">
+                                <h3 class="name">Николай Тарасов</h3>
+                                <p class="job">Marketing</p>
+                            </div>
                         </li>
                         <li class="item-team">
                             <img src="./image/team4.jpg" alt="Designer" width="270" height="260">
-                            <h3 class="name">Михаил Ермаков</h3>
-                            <p class="job">UI Designer</p>
+                            <div class="worker">
+                                <h3 class="name">Михаил Ермаков</h3>
+                                <p class="job">UI Designer</p>
+                            </div>
                         </li>
                      </ul> 
                 </div> 
         </section>  
     </main>
-   <footer class="bg-order">
-        <div class="conteiner footer">
+   <footer class="bg-order footer">
+        <div class="conteiner">
                 <a class="logo" href="./index.html">Web<span class="logo-white">Studio</span></a>
                 <address>
                     <ul class="list-adress">
