--- a/portfolio.html
+++ b/portfolio.html
@@ -31,80 +31,82 @@
         </div>
     </header>
     <main class="main">
-        <section class="section conteiner">
-            <h1 class="none">Меню сайта</h1>
-            <ul class="menu">
-                <li class="item"><button class="button" type="button">Все</button></li>
-                <li class="item"><button class="button" type="button">Веб-сайты</button></li>
-                <li class="item"><button class="button" type="button">Приложения</button></li>
-                <li class="item"><button class="button" type="button">Дизайн</button></li>
-                <li class="item"><button class="button" type="button">Маркетинг</button></li>
-            </ul>
-            <ul class="cards">
-                <li class="item">
-                    <img src="./image/portfolio/tehno.jpg" alt="технокряк" width="370">
-                    <div class="border">
-                        <h2 class="cards-title">Технокряк</h2>
-                        <p class="cards-text">Веб-сайт</p>
-                    </div>
-                </li>
-                <li class="item">
-                    <img src="./image/portfolio/poster.jpg" alt="постер" width="370" height="294">
-                    <div class="border">
-                        <h2 class="cards-title">Постер New Orlean vs Golden Star</h2>
-                        <p class="cards-text">Дизайн</p>
-                    </div>
-                </li>
-                <li class="item">
-                    <img src="./image/portfolio/restoran.jpg" alt="ресторан" width="370" height="294">
-                    <div class="border">
-                        <h2 class="cards-title">Ресторан Seafood</h2>
-                        <p class="cards-text">Приложение</p>
-                    </div>
-                </li>
-                <li class="item">
-                    <img src="./image/portfolio/prime.jpg" alt="проэкт прайм" width="370" height="294">
-                    <div class="border">
-                        <h2 class="cards-title">Проект Prime</h2>
-                        <p class="cards-text">Маркетинг</p>
-                    </div>
-                </li>
-                <li class="item">
-                    <img src="./image/portfolio/boxes.jpg" alt="проэкт боксес" width="370" height="294">
-                    <div class="border">
-                        <h2 class="cards-title">Проект Boxes</h2>
-                        <p class="cards-text">Приложение</p>
-                    </div>
-                </li>
-                <li class="item">
-                    <img src="./image/portfolio/monitor.jpg" alt="монитор" width="370" height="294">
-                    <div class="border">
-                        <h2 class="cards-title">Inspiration has no Borders</h2>
-                        <p class="cards-text">Веб-сайт</p>
-                    </div>
-                </li>
-                <li class="item">
-                    <img src="./image/portfolio/book.jpg" alt="книга" width="370" height="294">
-                    <div class="border">
-                        <h2 class="cards-title">Издание Limited Edition</h2>
-                        <p class="cards-text">Дизайн</p>
-                    </div>
-                </li>
-                <li class="item">
-                    <img src="./image/portfolio/lab.jpg" alt="проэкт лаб" width="370" height="294">
-                    <div class="border">
-                        <h2 class="cards-title">Проект LAB</h2>
-                        <p class="cards-text">Маркетинг</p>
-                    </div>
-                </li>
-                <li class="item">
-                    <img src="./image/portfolio/netbook.jpg" alt="ноут" width="370" height="294">
-                    <div class="border">
-                        <h2 class="cards-title">Growing Business</h2>
-                        <p class="cards-text">Приложение</p>
-                    </div>
-                </li>
-            </ul>
+        <section class="section">
+            <div class="conteiner">
+                <h1 class="none">Меню сайта</h1>
+                <ul class="menu">
+                    <li class="item"><button class="button" type="button">Все</button></li>
+                    <li class="item"><button class="button" type="button">Веб-сайты</button></li>
+                    <li class="item"><button class="button" type="button">Приложения</button></li>
+                    <li class="item"><button class="button" type="button">Дизайн</button></li>
+                    <li class="item"><button class="button" type="button">Маркетинг</button></li>
+                </ul>
+                <ul class="cards">
+                    <li class="item">
+                        <img src="./image/portfolio/tehno.jpg" alt="технокряк" width="370">
+                        <div class="border">
+                            <h2 class="cards-title">Технокряк</h2>
+                            <p class="cards-text">Веб-сайт</p>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <img src="./image/portfolio/poster.jpg" alt="постер" width="370" height="294">
+                        <div class="border">
+                            <h2 class="cards-title">Постер New Orlean vs Golden Star</h2>
+                            <p class="cards-text">Дизайн</p>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <img src="./image/portfolio/restoran.jpg" alt="ресторан" width="370" height="294">
+                        <div class="border">
+                            <h2 class="cards-title">Ресторан Seafood</h2>
+                            <p class="cards-text">Приложение</p>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <img src="./image/portfolio/prime.jpg" alt="проэкт прайм" width="370" height="294">
+                        <div class="border">
+                            <h2 class="cards-title">Проект Prime</h2>
+                            <p class="cards-text">Маркетинг</p>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <img src="./image/portfolio/boxes.jpg" alt="проэкт боксес" width="370" height="294">
+                        <div class="border">
+                            <h2 class="cards-title">Проект Boxes</h2>
+                            <p class="cards-text">Приложение</p>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <img src="./image/portfolio/monitor.jpg" alt="монитор" width="370" height="294">
+                        <div class="border">
+                            <h2 class="cards-title">Inspiration has no Borders</h2>
+                            <p class="cards-text">Веб-сайт</p>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <img src="./image/portfolio/book.jpg" alt="книга" width="370" height="294">
+                        <div class="border">
+                            <h2 class="cards-title">Издание Limited Edition</h2>
+                            <p class="cards-text">Дизайн</p>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <img src="./image/portfolio/lab.jpg" alt="проэкт лаб" width="370" height="294">
+                        <div class="border">
+                            <h2 class="cards-title">Проект LAB</h2>
+                            <p class="cards-text">Маркетинг</p>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <img src="./image/portfolio/netbook.jpg" alt="ноут" width="370" height="294">
+                        <div class="border">
+                            <h2 class="cards-title">Growing Business</h2>
+                            <p class="cards-text">Приложение</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="bg-order footer">
